sort the list in android

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -31,6 +31,15 @@
 
     </androidx.appcompat.widget.Toolbar>
 
+    <ImageView
+        android:id="@+id/sort"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:src="@drawable/ic_sort_list"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        android:layout_width="@dimen/dp_40"
+        android:layout_height="@dimen/dp_40"/>
+
+
 
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
@@ -38,7 +47,7 @@
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
-       app:layout_constraintTop_toBottomOf="@+id/toolbar"/>
+       app:layout_constraintTop_toBottomOf="@+id/sort"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
