--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -61,7 +61,7 @@
             app:layout_constraintTop_toBottomOf="@+id/tvEmail" />
         <RatingBar
             android:id="@+id/rating"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:scaleX="0.9"
             android:scaleY="0.8"
