--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -45,6 +45,8 @@
        android:layout_width="match_parent"
        android:id="@+id/recyclerView"
        android:layout_height="wrap_content"
+       android:layout_marginStart="@dimen/dp_16"
+       android:layout_marginEnd="@dimen/dp_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sort"/>
