swipe item delete

--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -31,6 +31,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dp_08"
+            android:textColor="@color/black"
             android:padding="@dimen/dp_08"
             android:text="Praveen Aade"
             android:textSize="16sp"
@@ -43,6 +44,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="@dimen/dp_08"
+            android:textColor="@color/black"
             android:text="praveenaade15@gmail.com"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="@id/endGuideLine"
@@ -55,6 +57,7 @@
             android:layout_height="wrap_content"
             android:padding="@dimen/dp_08"
             android:text="+916300333445"
+            android:textColor="@color/black"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="@id/endGuideLine"
             app:layout_constraintStart_toStartOf="@id/startGuideLine"
